--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "@vercel/analytics": "^1.1.1"
   },
   "devDependencies": {
     "eslint": "^8",
